--- a/Checkout.html
+++ b/Checkout.html
@@ -12,7 +12,7 @@
     <header class="transparent-header">
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Products.html">Products</a></li>
                 <li><a href="Cart.html">Cart</a></li>
                 <li><a href="About Us.html">About Us</a></li>
