--- a/Confirmation.html
+++ b/Confirmation.html
@@ -10,7 +10,7 @@
     <header class="transparent-header">
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Products.html">Products</a></li>
                 <li><a href="Cart.html">Cart</a></li>
                 <li><a href="About Us.html">About Us</a></li>
@@ -67,7 +67,7 @@
             e.preventDefault();
             alert('Your purchase is complete! Thank you for shopping with us.');
             localStorage.removeItem('cart');
-            window.location.href = 'Home.html'; 
+            window.location.href = 'index.html'; 
             
         });
         </script>
